Date	Added

2006/08/28
	* Merged atcommands @jailfor, @jailtime, @charjailtime (atcommand_conf)
	  [Skotlex]
	* New manner/muting system. Where muting is always allowed, but
	  you use manner_system to specify what does being muted blocks (misc.conf)
	  [Skotlex]
	* Removed setting muting_players as it's always enabled now. [Skotlex]
	* pk_mode setting update so you can enable/disable the manner penalty when
	  killing other players (misc.conf) [Skotlex]
	* Added config setting "duel_only_on_same_map" (misc.conf) [Skotlex]
2006/08/24
	* Merged command @charspeed [Skotlex]
	* Merged the expanded use of the enable_logs setting. [Skotlex]
	- enable_logs is not a 0/1 setting now, but it can be used to specify which
	  types of events are to be logged. logpick has been removed, or more
	  specifically, it has been renamed to log_filter. Using both together you
	  can get more specific rules of which stuff to log (log_athena.conf)
2006/08/23
	* Made the default for sql ping interval 7 hours rather than disabled.
	  (inter_athena) [Skotlex]
2006/08/22
	* Removed useless atcommands @itemcheck and @rain [Skotlex]
	* Merged config setting minsave_interval which specifies minimum time
	  between saves, useful to prevent hammering the char-server with character
	  saves on high population maps. Defaults to 100ms (map_athena.txt) [Skotlex]
2006/08/17
	* Merged the force_random_spawn battle option (monster.conf) [Skotlex]
	* Merged the updated config option for emergency_call (skill.conf)
	  [Skotlex]
2006/08/14
	* Merged attack_attr_none now applying only to neutral-type attacks,
	  removed setting mob_ghostring_fix as it's no longer needed (battle.conf)
	  [Skotlex]
	* Removed settings display_delay_skill_fail and
	  display_snatcher_skill_fail, replaced them by display_skill_fail
	  (skill.conf) [Skotlex]
2006/08/11
	* Merged maps_athena.conf from TRUNK [Lupus]
2006/08/08
	* Removed setting enemy_critical_rate, added settings enable_critical