@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES
 GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
+2006/08/31
+	* Fixed @summon's delete timer being screwed up. [Skotlex]
+	* Fixed the clone script command's delete-timer being screwed up. [Skotlex]
 2006/08/30
 	* Added a check in status_calc_pc to prevent hprate/sprate underflows.
 	  [Skotlex]
