@@ -86,7 +86,7 @@ natural_heal_weight_rate: 50
 max_aspd: 190
 
 // Maximum walk speed rate (200 would be capped to twice the normal speed)
-max_walk_rate: 300
+max_walk_speed: 300
 
 // Maximum HP. (Default is 1000000) (Note 3)
 max_hp: 1000000
