@@ -8485,7 +8485,6 @@ atcommand_summon(
 {
 	char name[NAME_LENGTH];
 	int mob_id = 0;
-	int id = 0;
 	int duration = 0;
 	struct mob_data *md;
 	unsigned int tick=gettick();
@@ -8512,7 +8511,7 @@ atcommand_summon(
 	if(md){
 		md->master_id=sd->bl.id;
 		md->special_state.ai=1;
-		md->deletetimer=add_timer(tick+(duration*60000),mob_timer_delete,id,0);
+		md->deletetimer=add_timer(tick+(duration*60000),mob_timer_delete,md->bl.id,0);
 		clif_misceffect2(&md->bl,344);
 		mob_spawn(md);
 		sc_start4(&md->bl, SC_MODECHANGE, 100, 1, 0, MD_AGGRESSIVE, 0, 60000);
