@@ -1,5 +1,8 @@
 Date	Added
 
+2006/08/31
+	* Corrected battle config name max_walk_rate, it should be named
+	  max_walk_speed. [Skotlex]
 2006/08/28
 	* Merged atcommands @jailfor, @jailtime, @charjailtime (atcommand_conf)
 	  [Skotlex]
